--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="export/FireworkSim.exe"
+export_path="export/FireworkSim.scr"
 script_export_mode=1
 script_encryption_key=""
 
@@ -31,11 +31,11 @@ codesign/timestamp_server_url=""
 codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PoolStringArray(  )
-application/icon=""
-application/file_version=""
-application/product_version=""
+application/icon="res://Fireworks.ico"
+application/file_version="1.1"
+application/product_version="1.1"
 application/company_name=""
-application/product_name=""
+application/product_name="Firework Simulation (Screensaver)"
 application/file_description=""
 application/copyright=""
 application/trademarks=""
@@ -49,7 +49,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="export/FireworkSim.x86_64"
+export_path="export/FireworkSimScreensaver.x86_64"
 script_export_mode=1
 script_encryption_key=""
 
