--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -31,11 +31,11 @@ codesign/timestamp_server_url=""
 codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PoolStringArray(  )
-application/icon=""
-application/file_version=""
-application/product_version=""
+application/icon="res://Fireworks.ico"
+application/file_version="1.1"
+application/product_version="1.1"
 application/company_name=""
-application/product_name=""
+application/product_name="Firework Simulation"
 application/file_description=""
 application/copyright=""
 application/trademarks=""
